--- a/hugo.yaml
+++ b/hugo.yaml
@@ -90,6 +90,8 @@ params:
       url: "mailto:putrantosurya@tutamail.com"
     - name: github
       url: "https://github.com/Samestora"
+    - name: rss
+      url: "/index.xml"
 
   analytics:
     google:
@@ -114,7 +116,7 @@ params:
     threshold: 0.4
     minMatchCharLength: 0
     # limit: 10 # refer: https://www.fusejs.io/api/methods.html#search
-    keys: ["title", "permalink", "summary", "content"]
+    keys: ["title", "summary", "content"]
 
 outputs:
   home:
@@ -123,9 +125,9 @@ outputs:
     - JSON # necessary for search
 menu:
   main:
-    - identifier: search
-      name: Search
-      url: /search/
+    - identifier: archives
+      name: Lookup
+      url: "/lookup/"
       weight: 1
     - identifier: categories
       name: Categories
@@ -139,10 +141,7 @@ menu:
       name: Repository
       url: /repository/
       weight: 4
-    - name: archives
-      name: Archives
-      url: "/archives/"
-      weight: 5
+
 
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
