--- a/hugo.yaml
+++ b/hugo.yaml
@@ -24,7 +24,7 @@ params:
   author: "Samestora"
   # author: ["Me", "You"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
-  DateFormat: "2 January 2006"
+  DateFormat: "2 January 2006 3:04PM"
   defaultTheme: auto # dark, light
   disableThemeToggle: false
 
